feat: Órdenes automáticamente PAID con descuento de stock + Fix de seguridad en endpoints de autenticación
- OrderService: Las órdenes ahora se crean con estado PAID automáticamente
- OrderService: El stock se descuenta inmediatamente al crear la orden (checkout)
- SecurityConfig: Agregado soporte para peticiones OPTIONS (CORS preflight)
- SecurityConfig: Endpoints de autenticación (/api/auth/**) explícitamente públicos
- Agregados documentos: API_ENDPOINTS.md y SOLUCION_EC2_FIREBASE.md

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ build/
 .env.local
 .env.*.local
 
+### Firebase Credentials ###
+**/fullstack-gamerzone-firebase.json
+src/main/resources/fullstack-gamerzone-firebase.json
+
 ### Node modules (si usaste Firebase CLI) ###
 node_modules/
 package-lock.json
