--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,11 +3,11 @@ server.port=8080
 server.address=0.0. 0.0
 
 # CORS - Permitir requests desde S3
-cors.allowed.origins=https://tu-bucket-frontend.s3.amazonaws.com,https://tu-dominio.com
+cors.allowed.origins=http://zonagamer-web-prod.s3-website-us-east-1.amazonaws.com/
 
-# Firebase Configuration
-firebase.config.path=${FIREBASE_CONFIG_PATH:/C:\Users\alfon\Desktop\PROGRAMACION\PROYECTOS_WEB\REACT-ZONA_GAMER\zonagamer-backend\src\main\resources\fullstack-gamerzone-firebase.json}
-firebase.storage.bucket=${FIREBASE_STORAGE_BUCKET}
+    # Firebase Configuration
+    firebase.config.path=${FIREBASE_CONFIG_PATH:/C:\Users\alfon\Desktop\PROGRAMACION\PROYECTOS_WEB\REACT-ZONA_GAMER\zonagamer-backend\src\main\resources\fullstack-gamerzone-firebase.json}
+    firebase.storage.bucket=${FIREBASE_STORAGE_BUCKET}
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
